# Crysto

backend/: .env.example  Cargo.toml
backend/migrations/: 20251122093008_user_auth.sql
backend/src/: auth.rs  config.rs  main.rs
frontend/: package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: DecypherLR.svelte  DecypherRand.svelte  TagList.svelte  TipTap.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/[...catchall]/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/notes/[slug]/: +page.svelte
frontend/src/routes/signup/: +page.svelte
