[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
] }
tracing = "0.1.41"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
envy = "0.4.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.6", features = ["trace"] }
argon2 = "0.5.3"
serde_json = "1.0.145"
